--- a/web/web.cabal
+++ b/web/web.cabal
@@ -28,6 +28,8 @@ library
                      , text
                      , data-default-class
                      , persistence
+                     , wai-extra
+                     , http-types
   default-language:    Haskell2010
 
 test-suite web-test
