Add cors middleware

--- a/web/web.cabal
+++ b/web/web.cabal
@@ -29,6 +29,7 @@ library
                      , data-default-class
                      , persistence
                      , wai-extra
+                     , wai-cors
                      , http-types
   default-language:    Haskell2010
 
