Fix docker deployment configs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,15 @@ version: '3.1'
 
 services:
 
+  api:
+    build: 
+      context: .
+    command: /opt/lightson/lightson-exe
+    image: alkuatovnurlan/lightson:latest
+    restart: always
+    ports:
+      - 3000:3000
+
   adminer:
     image: adminer
     restart: always
