Cors configurations, score insertion, docker configs

--- a/web/web.cabal
+++ b/web/web.cabal
@@ -16,8 +16,8 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Data.Score
-  other-modules:       Lib
-                     , Web.Routes
+                     , Server
+  other-modules:       Web.Routes
   build-depends:       base >= 4.7 && < 5
                      , aeson
                      , hspec
